<resources>
    <string name="app_name">customer</string>
    <string name="tab_text_1">Purchase</string>
    <string name="tab_text_2">Trip</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_navigate" translatable="false">NavigateActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="network_error">No internet connection</string>


    <string name="login">LogIn</string>
    <string name="new_account">New Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="sample_mail_id">name@example.com</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="password_txt">******</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection.</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="server_down">Unable to reach server.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="email_validation">Enter your email ID.</string>
    <string name="not_valid_email">Not a valid email ID.</string>
    <string name="password_validation">Password could not be left empty.</string>
    <string name="first_name_empty">First name required.</string>
    <string name="last_name_empty">Last name required.</string>
    <string name="mobile_number_empty">Mobile number required.</string>
    <string name="first_name_no_number">Name Not match</string>
    <string name="check_email_or_password">check email and password</string>
    <string name="enter_your_email_to_reset">Enter your email to reset</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_place">  Enter Place</string>
    <string name="button_ok">Settings</string>
    <string name="g_p_s">GPS</string>
    <string name="open_gps">Please Open GPS</string>
    <string name="receiver_place_my_location">Receiver place (my resultLocation)</string>
    <string name="order_details">Order Details</string>
    <string name="notes">Notes</string>
    <string name="send_order">Send Order</string>
    <string name="next">Next</string>
    <string name="arrival_area">Arrival Area</string>
    <string name="my_location">My Location</string>
    <string name="receiver_place">receiver place</string>
    <string name="get_location_permistion">Gimme the permission!</string>
    <string name="gps_message">Would you mind to turn GPS on with high accuracy mode?</string>

    <string name="purchase_order">Purchase order</string>
    <string name="order_detail_2">\n to </string>
    <string name="order_detail_3">\n total distance </string>
    <string name="order_detail_4"> km </string>
    <string name="order_detail_5">\n cost of km </string>
    <string name="order_detail_6"> SR </string>
    <string name="trip_order">Trip</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="distance">Distance:</string>
    <string name="cost">Cost:</string>
    <string name="k_m">km</string>
    <string name="omla">SR</string>
    <string name="details">Details</string>
    <string name="current_order_details">Details:</string>
    <string name="current_order_notes">Notes:</string>
    <string name="drivers">Drivers</string>
    <string name="purchases">Purchases</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="no_drivers_accept_the_order_yet">No drivers accept the order yet</string>
    <string name="order_cost">Order Cost :</string>
    <string name="arrival_distance">Arrival distance:</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="create_order">Create Order</string>
    <string name="choose_place_text">Pleas choose place to make order</string>
    <string name="accept_offer_message">Hi i accept your offer</string>

    <string name="time_just_now">just now</string>
    <string name="time_a_minute">a minute</string>
    <string name="time_minutes">minutes</string>
    <string name="time_an_hour">an hour</string>
    <string name="time_hours">hours</string>
    <string name="time_yasterday">yesterday</string>
    <string name="time_days">days</string>
    <string name="write_message">Write Message</string>
    <string name="current_order">Current Order</string>
    <string name="chats">Chats</string>
    <string name="Chats">Chats</string>

    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="cost_of_purchases">Cost of purchases: </string>
    <string name="delivery_cost">Delivery cost: </string>
    <string name="total_cost">Total cost: </string>
    <string name="sr">SR</string>
    <string name="receiver_location">Receiver Location</string>
    <string name="cancel_the_order">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">If you return, the order will be deleted</string>
    <string name="delete_order">Delete The order</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="profile_picture">Profile image</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_required">Profile Image required</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="finish_order">Finish Order</string>
    <string name="Rate">Rate</string>
    <string name="please_rate_me">Pleas Rate Me</string>
    <string name="rate">Rate</string>
    <string name="log_out">Log out</string>
    <string name="no_user">No users with this email</string>
    <string name="getting_location">Getting resultLocation...</string>
    <string name="string_logo">Places</string>
    <string name="search">Search</string>
    <string name="nearby_places">Nearby places</string>
    <string name="no_places">No Places</string>
    <string name="egypt">Egypt</string>
    <string name="saudi_arabia">saudi arabia</string>
</resources>
