<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:drawme="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background_shape"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:id="@+id/registertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ic_edit_text_background_shape">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_account_circle_black_24dp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/gray"
                    android:gravity="start"
                    android:hint="@string/name"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_edit_text_background_shape">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_email_blue" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/gray"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_edit_text_background_shape">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_key" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/gray"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_edit_text_background_shape">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_call_black_24dp" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/gray"
                    android:gravity="start"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <com.rafakob.drawme.DrawMeButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/register"
                android:textColor="@color/white"
                drawme:dm_backColor="@color/colorPrimary"
                drawme:dm_backColorDisabled="@color/colorPrimary"
                drawme:dm_backColorPressed="@color/green"
                drawme:dm_radius="16dp" />

        </LinearLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <com.rafakob.drawme.DrawMeButton
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registertext"
        android:layout_alignParentBottom="true"
        android:textSize="22dp"
        android:layout_marginBottom="16dp"
        fontPath="fonts/AraHamahAlislam-Regular.ttf"
        android:textColor="@color/white"
        android:text="@string/login"/>

</RelativeLayout>